[gd_scene load_steps=17 format=2]

[ext_resource path="res://anim_color.gd" type="Script" id=1]
[ext_resource path="res://art/sprite_idle1.png" type="Texture" id=2]
[ext_resource path="res://colorcustom.gdshader" type="Shader" id=3]
[ext_resource path="res://art/Poco.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://colorcustom.gd" type="Script" id=5]
[ext_resource path="res://art/melodic-techno-03-extended-version-moogify-9867.mp3" type="AudioStream" id=6]
[ext_resource path="res://colorcustomcontrolscreen.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/red = null
shader_param/green = null
shader_param/blue = null
shader_param/black = null

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 38
outline_size = 3
outline_color = Color( 0.180392, 0.580392, 0.552941, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 38
outline_size = 3
outline_color = Color( 0.745098, 0.25098, 0.780392, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 38
outline_size = 3
outline_color = Color( 0.52549, 0.592157, 0.25098, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 38
outline_size = 3
outline_color = Color( 0.529412, 0.435294, 1, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 49
outline_size = 2
outline_color = Color( 1, 0.635294, 0.376471, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 41
outline_size = 2
outline_color = Color( 0.666667, 0.776471, 0.129412, 1 )
extra_spacing_bottom = -25
extra_spacing_space = -3
font_data = ExtResource( 4 )

[node name="colorpicker" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 716.0
color = Color( 0.67451, 0.788235, 0.960784, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( 1003, 445 )
scale = Vector2( 0.984864, 0.903809 )
frames = SubResource( 3 )
script = ExtResource( 1 )

[node name="colorpickerbutton1" type="ColorPickerButton" parent="."]
margin_left = 45.0
margin_top = 44.0
margin_right = 398.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="colorpickerbutton1"]
margin_left = 48.0
margin_top = 42.0
margin_right = 305.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
text = "Primary Color"
align = 1
valign = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_left = 50.0
margin_top = 200.0
margin_right = 395.0
margin_bottom = 252.0

[node name="Label" type="Label" parent="ColorPickerButton"]
margin_left = 42.0
margin_top = 37.0
margin_right = 307.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 5 )
text = "Secondary Color"

[node name="ColorPickerButton2" type="ColorPickerButton" parent="."]
margin_left = 54.0
margin_top = 379.0
margin_right = 397.0
margin_bottom = 439.0

[node name="Label" type="Label" parent="ColorPickerButton2"]
margin_left = 56.0
margin_top = 46.0
margin_right = 321.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 6 )
text = "Tertiary Color"

[node name="ColorPickerButton3" type="ColorPickerButton" parent="."]
margin_left = 55.0
margin_top = 562.0
margin_right = 398.0
margin_bottom = 613.0

[node name="Label" type="Label" parent="ColorPickerButton3"]
margin_left = 35.0
margin_top = 39.0
margin_right = 315.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 7 )
text = "Quaternary Color"

[node name="Button" type="Button" parent="."]
margin_left = 467.0
margin_top = 337.0
margin_right = 727.0
margin_bottom = 429.0
custom_fonts/font = SubResource( 8 )

[node name="Label" type="Label" parent="Button"]
margin_left = 22.0
margin_top = 5.0
margin_right = 247.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 9 )
text = "Let's Play!"

[node name="InstructionsScreen" type="Button" parent="."]
margin_left = 966.0
margin_top = 16.0
margin_right = 1256.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="InstructionsScreen"]
margin_left = 5.0
margin_top = 3.0
margin_right = 294.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 10 )
text = "Color Selection  Tutorial"
align = 1
autowrap = true

[node name="Node2D" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CloseScreen" type="Button" parent="."]
visible = false
margin_left = 1096.0
margin_top = 16.0
margin_right = 1250.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="CloseScreen"]
margin_left = 4.0
margin_top = -6.0
margin_right = 150.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 10 )
text = "Close"
align = 1
autowrap = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="color_changed" from="colorpickerbutton1" to="AnimatedSprite" method="_on_ColorPickerButton_color_changed"]
[connection signal="color_changed" from="colorpickerbutton1" to="AnimatedSprite" method="_on_colorpickerbutton1_color_changed"]
[connection signal="color_changed" from="ColorPickerButton" to="AnimatedSprite" method="_on_ColorPickerButton_color_changed"]
[connection signal="color_changed" from="ColorPickerButton2" to="AnimatedSprite" method="_on_ColorPickerButton2_color_changed"]
[connection signal="color_changed" from="ColorPickerButton3" to="AnimatedSprite" method="_on_ColorPickerButton3_color_changed"]
[connection signal="pressed" from="Button" to="AnimatedSprite" method="_on_Button_pressed"]
[connection signal="pressed" from="InstructionsScreen" to="." method="_on_InstructionsScreen_pressed"]
[connection signal="pressed" from="CloseScreen" to="." method="_on_CloseScreen_pressed"]
